[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "authlx-sdk"
version = "1.0.0"
description = "Official Python SDK for AuthLX — Premium Authentication, Licensing, and Security System."
readme = "README.md"
license = "MIT"
authors = [
    { name = "AuthLX", email = "support@authlx.com" }
]
keywords = [
    "authlx", "authentication", "licensing", "hwid",
    "security", "anti-cheat", "keygen", "software-protection"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.20.0",
]

[project.optional-dependencies]
windows = ["pywin32"]

[project.urls]
Homepage = "https://authlx.com"
Documentation = "https://authlx.com"
Repository = "https://github.com/AuthLX/AuthLX-Python-Example"
"Bug Tracker" = "https://github.com/AuthLX/AuthLX-Python-Example/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["authlx*"]
